<resources>
    <string name="app_name">Financial Calculator</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_dot">.</string>
    <string name="button_posneg">+ | -</string>
    <string name="button_division">÷</string>
    <string name="button_multiply">×</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_equal">=</string>
    <string name="button_clear">CE | C</string>
    <string name="button_help">HELP</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
</resources>
