<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#ff5c5c5c"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:padding="1dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_seven"
        android:onClick="onButtonClick"
        android:layout_marginTop="76dp"
        android:id="@+id/button"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eight"
        android:onClick="onButtonClick"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_nine"
        android:onClick="onButtonClick"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_division"
        android:onClick="onButtonClick"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_four"
        android:onClick="onButtonClick"
        android:id="@+id/button5"
        android:layout_below="@+id/button"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_five"
        android:onClick="onButtonClick"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_six"
        android:onClick="onButtonClick"
        android:id="@+id/button7"
        android:layout_alignBottom="@+id/button6"
        android:layout_toLeftOf="@+id/button4"
        android:layout_toStartOf="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:onClick="onButtonClick"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        android:onClick="onButtonClick"
        android:id="@+id/button9"
        android:layout_below="@+id/button5"
        android:layout_toLeftOf="@+id/button6"
        android:layout_toStartOf="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        android:onClick="onButtonClick"
        android:id="@+id/button10"
        android:layout_alignBottom="@+id/button9"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_three"
        android:onClick="onButtonClick"
        android:id="@+id/button11"
        android:layout_alignBottom="@+id/button10"
        android:layout_toLeftOf="@+id/button8"
        android:layout_toStartOf="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_subtract"
        android:onClick="onButtonClick"
        android:id="@+id/button12"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zero"
        android:onClick="onButtonClick"
        android:id="@+id/button13"
        android:layout_below="@+id/button9"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dot"
        android:onClick="onButtonClick"
        android:id="@+id/button14"
        android:layout_below="@+id/button10"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_posneg"
        android:onClick="onButtonClick"
        android:id="@+id/button15"
        android:layout_below="@+id/button10"
        android:layout_toRightOf="@+id/button10"
        android:layout_toEndOf="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="onButtonClick"
        android:id="@+id/button16"
        android:layout_alignBottom="@+id/button15"
        android:layout_alignRight="@+id/button12"
        android:layout_alignEnd="@+id/button12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_equal"
        android:onClick="onButtonClick"
        android:id="@+id/button17"
        android:layout_below="@+id/button15"
        android:layout_alignRight="@+id/button16"
        android:layout_alignEnd="@+id/button16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:onClick="onButtonClick"
        android:id="@+id/button18"
        android:layout_alignBottom="@+id/button17"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:textSize="12dp" />

    <TextView
        android:gravity="right"
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:padding="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_help"
        android:onClick="onOptionsItemSelected"
        android:id="@+id/button19"
        android:layout_alignBottom="@+id/button18"
        android:layout_toRightOf="@+id/button18"
        android:layout_toEndOf="@+id/button18"
        android:textSize="12dp" />

</RelativeLayout>
